# lab1

./: CMakeLists.txt  Makefile  array.cpp  avl_tree.cpp  avl_tree.h  commands.cpp  commands.h  coverage.dlist.cpp.325cd04c2bd2fd4903147191ac51c146.html  coverage.full_binary_tree.cpp.56761bc35350b3268c474f1df481803d.html  coverage.functions.html  coverage.gmock-cardinalities.cc.d0f179f1f7d2ec3a4c3756568848f987.html  coverage.gmock-matchers.cc.441b66ff531c29c88c990fc9757f635f.html  coverage.gmock-matchers.h.77d9e8a9a0ef588838b3f2dc69c81e93.html  coverage.gmock-spec-builders.h.76121af47ca60ab5f03961e17a585db4.html  coverage.gmock.cc.223fdd9331f802cc94482485ec58191d.html  coverage.gtest-assertion-result.cc.5192f17d587bda3a5514aebfedc9605b.html  coverage.gtest-death-test-internal.h.74d69e502309c8c756d85f101941d4e7.html  coverage.gtest-death-test.cc.a7127b6e0f005d317036bac172931fab.html  coverage.gtest-filepath.cc.6124330379547164b11bd3e556590b7f.html  coverage.gtest-filepath.h.b2233b4ba5ee9e91a0f1bf3a7d08ff94.html  coverage.gtest-port.cc.3f4efd8026eb898180ee0f7984f3c26e.html  coverage.gtest-printers.cc.b405c048ea5a638eb316894ea0357a99.html  coverage.gtest-type-util.h.2ae5df71bc75bcbf96b527567bbfff88.html  coverage.gtest.cc.4ce45bb93db36ee27ff2c337233aaca6.html  coverage.gtest.h.0986ef4f8fc8556ffce4b1a1582b1f6c.html  coverage.gtest_main.cc.6b450f234b5fe6d793193e0d3912d671.html  coverage.hash_simple.cpp.9427bc7c59c9d88588e46679f2a7f05f.html  coverage.html  coverage.test_array.cpp.03656277a00f5e29fb6ab7e74ef614e9.html  coverage.test_hash_simple.cpp.753ec4ffd302490b21330537beb033fe.html  coverage1.array.cpp.991818480b5bbb6b95febfcb6a96d9a0.html  coverage1.dlist.cpp.325cd04c2bd2fd4903147191ac51c146.html  coverage1.full_binary_tree.cpp.56761bc35350b3268c474f1df481803d.html  coverage1.functions.html  coverage1.gmock-internal-utils.h.392c98d40d1bd0747fcad98c8c6efad2.html  coverage1.gmock-matchers.h.77d9e8a9a0ef588838b3f2dc69c81e93.html  coverage1.gmock.cc.223fdd9331f802cc94482485ec58191d.html  coverage1.gmock_main.cc.59d4b52673d20d042b8613b4ff77f27d.html  coverage1.gtest-assertion-result.cc.5192f17d587bda3a5514aebfedc9605b.html  coverage1.gtest-assertion-result.h.c3d4eaac46b0251dd8a24879c792ba54.html  (+32 more)
go/: array.go  commands.go  coverage.html  coverage.out  dbms  dlist.go  file.data  go.mod  main.go  queue.go  slist.go  stack.go  storage.go  tree.go  tree_test.go
tests/: coverage.array.cpp.991818480b5bbb6b95febfcb6a96d9a0.html  coverage.gmock-cardinalities.h.a7601d833afbe244fb364d05b5ed27d3.html  coverage.gmock-internal-utils.cc.72e14aa065b42f7ae68cd12485f0a684.html  (+58 more)
